# funky_lesson_core

./: .gitignore  Cargo.toml  MODULAR_ARCHITECTURE.md  Readme.md  raw.py  release.bat  release.sh
.github/workflows/: ci.yml  release.yml
examples/: standalone.rs  wss.rs  wsss.rs  wssss.rs  wsssss.rs
src/: app.rs  crypto.rs  error.rs  interface.rs  lib.rs  main.rs  request.rs  request_old.rs
src/app/: gloo.rs  mod.rs  no_wasm.rs  request.rs  wasm.rs
src/client/: gloo.rs  mod.rs  request.rs
src/model/: dtos.rs  mod.rs  structs.rs
src/request/: mod.rs  no_wasm.rs  wasm.rs
