[package]
name = "funky_lesson_core"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
ecb = "0.1.2"
base64-simd = "0.8.0"

serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

tokio = { version = "1.47.1", features = ["sync","rt-multi-thread","time","macros"], optional = true  }
reqwest = { version = "0.12.23", default-features = false, features = ["rustls-tls","json", "cookies"] , optional = true }
futures = {version="0.3.31",optional=true}
futures-util = {version="0.3.31",optional=true}
tokio-tungstenite = {version = "0.27.0", optional = true, features = ["rustls-tls-webpki-roots"]}
rustls = {version = "0.23.31", optional = true}
webpki-roots = {version = "1.0.2", optional = true}
url =  {version = "2.5.7", optional = true}
rand = { version = "0.9.2", optional = true }

gloo-net = { version = "0.6.0",optional = true}
js-sys = { version ="0.3.77",optional = true}
web-sys = { version = "0.3.77", features = ["RequestInit", "Headers","console", "Window", "Performance"] ,optional=true}
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.40", optional = true }
serde-wasm-bindgen = { version ="0.6.5",optional = true}
log ={ version = "0.4.27", optional = true }

[features]
default = ["no-wasm","tui"]
tui = []
gui = []
no-wasm = ["tokio","reqwest","futures","futures-util","tokio-tungstenite","rustls","webpki-roots","url","rand"]
wasm = ["wasm-bindgen","wasm-bindgen-futures","gloo-net","web-sys","js-sys","serde-wasm-bindgen","log"]
proxy = []

[package.metadata]
conflicts = [
    ["wasm", "no-wasm"],
    ["tui", "gui"]
]